@@ -1,14 +1,12 @@
 package org.elyashevich.dbmigration.validation.impl;
 
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.core.Logger;
 import org.elyashevich.dbmigration.domain.DatabaseProperties;
 import org.elyashevich.dbmigration.exception.InvalidDatabasePropertiesException;
 import org.elyashevich.dbmigration.validation.Validation;
 
 public class PropertiesValidation implements Validation<DatabaseProperties> {
 
-    private static final Logger LOGGER = (Logger) LogManager.getLogger();
+    private static final String ERROR_TEMPLATE = "'%s' must not be empty.";
 
     @Override
     public void validate(final DatabaseProperties properties) {
@@ -19,10 +17,8 @@ public class PropertiesValidation implements Validation<DatabaseProperties> {
     }
 
     private static void validateProperty(final String property, final String propertyName) {
-        if (property == null || property.trim().isEmpty()) {
-            var message = propertyName + " must not be null or empty.";
-            LOGGER.warn(message);
-            throw new InvalidDatabasePropertiesException(message);
+        if (property.isBlank()) {
+            throw new InvalidDatabasePropertiesException(ERROR_TEMPLATE.formatted(propertyName));
         }
     }
 }
